# python-package-manager-shootout

./: .gitignore  LICENSE  Makefile  README.md  index.0007ac63.js  index.0007ac63.js.map  index.00109069.js  index.00109069.js.map  index.001a78bb.js  index.001a78bb.js.map  index.00281172.js  index.00281172.js.map  index.00281c27.js  index.00281c27.js.map  index.002955a2.js  index.002955a2.js.map  index.0030ecae.js  index.0030ecae.js.map  index.0030fd62.js  index.0030fd62.js.map  index.00524cd1.js  index.00524cd1.js.map  index.005e1ba3.js  index.005e1ba3.js.map  index.0066e829.js  index.0066e829.js.map  index.0084185e.js  index.0084185e.js.map  index.00b764f6.js  index.00b764f6.js.map  index.00d4f1be.js  index.00d4f1be.js.map  index.00d9fa29.js  index.00d9fa29.js.map  index.00e83c79.js  index.00e83c79.js.map  index.00f14c0f.js  index.00f14c0f.js.map  index.00fb751d.js  index.00fb751d.js.map  (+10321 more)
.github/workflows/: benchmark.yml  deploy.yml
pdm/: pyproject.toml
pdm-uv/: pyproject.toml
pixi/: pixi.toml  pyproject.toml
poetry/: pyproject.toml
rye/: README.md  pyproject.toml
site/: .gitignore  README.md  csv_to_json.py  index.html  index.js  package-lock.json  package.json
templates/: workflow_end.yml  workflow_preamble.yml  workflow_start.yml  workflow_tool.yml
uv/: pyproject.toml
